aggiunta cartella dist al repository

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
 <!--MOBILE-->
 <div class="background">
   <a href="provaabcd.html">
-<img src="/img/pergamena-iniziale.png" alt=""></a>
+<img src="img/pergamena-iniziale.png" alt=""></a>
 <h3>CLICCAMI PER APRIRE</h3>
 </div>
 
