--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
  
 <!--MOBILE-->
 <div class="background">
-  <a href="provaabcd.html">
+  <a href="indexMobile.html">
 <img src="img/pergamena-iniziale.png" alt=""></a>
 <h3>CLICCAMI PER APRIRE</h3>
 </div>
