--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
 <div class="background">
   <a href="indexMobile.html">
 <img src="img/pergamena-iniziale.png" alt=""></a>
-<h3>CLICCAMI PER APRIRE</h3>
+<h3>Benvenuto su: <br><i>" Tovalibro"</i><br>Clicca la pergamena per continuare...</h3>
 </div>
 
 </body>
